--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "^14.2.17",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
