--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^14.2.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
